# Checkerboard

./: CMakeLists.txt  README.md
src/: client.cpp  config.h  server.cpp
src/board/: board.cpp  board.hpp  boardhandler.cpp  boardhandler.hpp  drawer.cpp  drawer.hpp  king.cpp  king.hpp  location.hpp  man.cpp  man.hpp  piece.cpp  piece.hpp
src/tcp/: acceptor.cpp  acceptor.hpp  connector.cpp  connector.hpp  stream.cpp  stream.hpp
src/thread/: multithread.hpp  pointersstack.hpp  sharedqueue.hpp
test/: board.cpp  multithread.cpp  tcp.cpp
